fiesta bowl update

--- a/bowl_pool/2025-2026/picks.html
+++ b/bowl_pool/2025-2026/picks.html
@@ -1691,8 +1691,8 @@ ul.auto-toc {
 </tr>
 <tr><td>39</td>
 <td>CFP Semifinal (Fiesta)</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
+<td>Miami</td>
+<td>Ole Miss</td>
 <td>0.0</td>
 <td>Georgia</td>
 <td>Ohio State</td>
