--- a/bowl_pool/2025-2026_CFP/picks.html
+++ b/bowl_pool/2025-2026_CFP/picks.html
@@ -701,8 +701,8 @@ ul.auto-toc {
 </tr>
 <tr><td>9</td>
 <td>CFP Semifinal (Fiesta)</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
+<td>Miami</td>
+<td>Ole Miss</td>
 <td>0.0</td>
 <td>Georgia</td>
 <td>Ohio State</td>
