--- a/bowl_pool/2025-2026_CFP/rankings.html
+++ b/bowl_pool/2025-2026_CFP/rankings.html
@@ -365,8 +365,8 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-04 16:56:45</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Sugar) (Georgia vs. Ole Miss)</em></div>
+<div class="line"><em>Last updated:  2026-01-08 22:43:19</em></div>
+<div class="line"><em>Last bowl scored:  CFP Semifinal (Fiesta) (Miami vs. Ole Miss)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Sherrone Moore's Bad Day 16.5</strong></div>
