--- a/bowl_pool/2025-2026_CFP/results.html
+++ b/bowl_pool/2025-2026_CFP/results.html
@@ -699,6 +699,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>9</td>
+<td>CFP Semifinal (Fiesta)</td>
+<td>Miami</td>
+<td>Ole Miss</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
