peach bowl update

--- a/bowl_pool/2025-2026/picks.html
+++ b/bowl_pool/2025-2026/picks.html
@@ -1724,8 +1724,8 @@ ul.auto-toc {
 </tr>
 <tr><td>40</td>
 <td>CFP Semifinal (Peach)</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Indiana/AL/OK</td>
+<td>Oregon</td>
+<td>Indiana</td>
 <td>0.0</td>
 <td>Alabama</td>
 <td>Indiana</td>
@@ -1757,8 +1757,8 @@ ul.auto-toc {
 </tr>
 <tr><td>41</td>
 <td>NATIONAL CHAMPIONSHIP</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
+<td>Indiana</td>
+<td>Miami</td>
 <td>0.0</td>
 <td>Georgia</td>
 <td>Indiana</td>
