--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,31 +365,31 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-08 22:43:20</em></div>
-<div class="line"><em>Last bowl scored:  CFP Semifinal (Fiesta) (Miami vs. Ole Miss)</em></div>
+<div class="line"><em>Last updated:  2026-01-11 17:57:14</em></div>
+<div class="line"><em>Last bowl scored:  CFP Semifinal (Peach) (Oregon vs. Indiana)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Sherrone Moore's Bad Day 40.5</strong></div>
 <div class="line">2. <strong>Battered Austin Syndrome 39.25</strong></div>
-<div class="line">3. Barkside Ballers 34.0</div>
-<div class="line">4. <strong>Vibe-free since '73 33.75</strong></div>
-<div class="line">5. BlueOrRed 33.0</div>
-<div class="line">6. Arandas legacy Year 32.75</div>
-<div class="line">6. Eclipse 32.75</div>
-<div class="line">8. Wisconsin shoud've been here 32.5</div>
-<div class="line">9. Dazed and Confoosballed 32.0</div>
-<div class="line">10. Upside 31.25</div>
-<div class="line">11. Just Call Me Dr. 30.5</div>
-<div class="line">11. Not So New Guy 30.5</div>
-<div class="line">13. #MamaBear 30.0</div>
-<div class="line">14. <strong>Down 29.5</strong></div>
-<div class="line">15. bugaroo 28.75</div>
-<div class="line">15. Sierra LeCat Dowdle 28.75</div>
-<div class="line">15. NoNND-Bo 1 28.75</div>
-<div class="line">15. Bearly Watching 28.75</div>
-<div class="line">19. Mama Dawg 28.25</div>
-<div class="line">19. NoNND-Bo 2 28.25</div>
-<div class="line">19. First Round SIL 28.25</div>
+<div class="line">3. <strong>Vibe-free since '73 37.75</strong></div>
+<div class="line">4. Arandas legacy Year 36.75</div>
+<div class="line">4. Eclipse 36.75</div>
+<div class="line">6. Upside 35.25</div>
+<div class="line">7. Not So New Guy 34.5</div>
+<div class="line">8. Barkside Ballers 34.0</div>
+<div class="line">8. #MamaBear 34.0</div>
+<div class="line">10. <strong>Down 33.5</strong></div>
+<div class="line">11. BlueOrRed 33.0</div>
+<div class="line">12. Wisconsin shoud've been here 32.5</div>
+<div class="line">13. First Round SIL 32.25</div>
+<div class="line">14. Dazed and Confoosballed 32.0</div>
+<div class="line">15. Just Call Me Dr. 30.5</div>
+<div class="line">16. bugaroo 28.75</div>
+<div class="line">16. Sierra LeCat Dowdle 28.75</div>
+<div class="line">16. NoNND-Bo 1 28.75</div>
+<div class="line">16. Bearly Watching 28.75</div>
+<div class="line">20. Mama Dawg 28.25</div>
+<div class="line">20. NoNND-Bo 2 28.25</div>
 <div class="line">22. Sascha Picks Dogs 27.25</div>
 <div class="line">23. We Pay Players 27.0</div>
 <div class="line">23. Game of Throws 27.0</div>
