--- a/bowl_pool/2025-2026_CFP/picks.html
+++ b/bowl_pool/2025-2026_CFP/picks.html
@@ -734,8 +734,8 @@ ul.auto-toc {
 </tr>
 <tr><td>10</td>
 <td>CFP Semifinal (Peach)</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Indiana/AL/OK</td>
+<td>Oregon</td>
+<td>Indiana</td>
 <td>0.0</td>
 <td>Alabama</td>
 <td>Indiana</td>
@@ -767,8 +767,8 @@ ul.auto-toc {
 </tr>
 <tr><td>11</td>
 <td>NATIONAL CHAMPIONSHIP</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
+<td>Indiana</td>
+<td>Miami</td>
 <td>0.0</td>
 <td>Georgia</td>
 <td>Indiana</td>
