--- a/bowl_pool/2025-2026_CFP/results.html
+++ b/bowl_pool/2025-2026_CFP/results.html
@@ -732,6 +732,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>10</td>
+<td>CFP Semifinal (Peach)</td>
+<td>Oregon</td>
+<td>Indiana</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -837,7 +870,7 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>9.5</strong></td>
-<td><strong>12.5</strong></td>
+<td><strong>16.5</strong></td>
 <td><strong>9.0</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>3.0</strong></td>
@@ -846,21 +879,21 @@ ul.auto-toc {
 <td><strong>10.0</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>10.0</strong></td>
+<td><strong>14.0</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>7.0</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>8.5</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>10.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>17.0</strong></td>
 <td><strong>12.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>12.0</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>10.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>14.0</strong></td>
 <td><strong>8.0</strong></td>
 <td><strong>7.0</strong></td>
 </tr>
