--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1722,6 +1722,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>40</td>
+<td>CFP Semifinal (Peach)</td>
+<td>Oregon</td>
+<td>Indiana</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1827,7 +1860,7 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>34.0</strong></td>
-<td><strong>33.75</strong></td>
+<td><strong>37.75</strong></td>
 <td><strong>32.0</strong></td>
 <td><strong>27.25</strong></td>
 <td><strong>20.25</strong></td>
@@ -1836,21 +1869,21 @@ ul.auto-toc {
 <td><strong>28.75</strong></td>
 <td><strong>28.75</strong></td>
 <td><strong>39.25</strong></td>
-<td><strong>32.75</strong></td>
+<td><strong>36.75</strong></td>
 <td><strong>28.25</strong></td>
 <td><strong>28.75</strong></td>
 <td><strong>28.25</strong></td>
 <td><strong>32.5</strong></td>
 <td><strong>28.75</strong></td>
 <td><strong>25.25</strong></td>
-<td><strong>29.5</strong></td>
-<td><strong>32.75</strong></td>
-<td><strong>28.25</strong></td>
-<td><strong>30.0</strong></td>
+<td><strong>33.5</strong></td>
+<td><strong>36.75</strong></td>
+<td><strong>32.25</strong></td>
+<td><strong>34.0</strong></td>
 <td><strong>33.0</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>30.5</strong></td>
-<td><strong>31.25</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>35.25</strong></td>
 <td><strong>27.0</strong></td>
 <td><strong>27.0</strong></td>
 </tr>
